<resources>
    <string name="app_name">PoliticGame</string>
    <string name="view_leader_board">View Leader Board</string>
    <string name="stamp_game_yes">Yes</string>
    <string name="stamp_game_char_image">Character Image</string>
    <string name="speech_successful_instruction">Congrats! You entered the correct word for the prompt :)</string>
    <string name="speech_failure_instruction">Sorry, the word you chose is not relevant to the prompt :(</string>
    <string name="speech_result_instruction"> PoliticGame Result Instructions:</string>
    <string name="speech_compare"> Submit</string>
    <string name="speech_user_input"> The related word is ...</string>
    <string name="the_baby_game">The Baby Game</string>
    <string name="speech_game_title">The Speech Game</string>
    <string name="the_stamping_game">The Stamping Game</string>
    <string name="baby_game_instruction_body">As everyone knows, baby kissing is the basis of modern day politics. As a politician, you must interact with these little humans. In this game, you will be given instructions on how to interact with the baby. You have 30 seconds to make the baby as happy as possible.</string>
    <string name="speech_instruction_body">In this game you will be giving a speech to public given a topic. What you need to do is to select the related word from the four possible choices and type it as an input</string>
    <string name="stamp_instruction_body">In this game you are sorting out the policies of your party. As the campaign leader, you decide what your party should fight for. However, the general populace will not always be happy with what you decide on, so use your judgement to decide what may be best for the country.</string>
    <string name="open_the_game">Open The Game!</string>
    <string name="stamp_game_no">No</string>
    <string name="stamp_game_proposal">number of proposals left</string>
    <string name="stamp_game_rating">your current rating</string>
    <string name="stamp_game_proposal_left">0</string>
    <string name="stamp_game_rating_score">50%</string>
    <string name="NPC_image">npcImage</string>
    <string name="NPC_Prompt">npcPrompt</string>
    <string name="next_game">Next</string>
    <string name="prompt_email">Email or UserName</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short"> Sign In</string>
    <string name="invalid_password">Invalid Password.We expected you to enter more than 4 characters for password</string>
    <string name="invalid_username">Invalid Username or email.Please make sure it is not empty or matches email format.</string>
    <string name="login_failed">Invalid Password</string>
    <string name="welcome">Welcome User:  </string>
    <string name="speechRating">Your current rating: 0%</string>
    <string name="StampGameWon">Congratulations! You have made reasonable choices with the given proposals. Your charisma made you one of the most popular candidates in this election.</string>
    <string name="stamp_game_lost_leaderboard">Game Summary</string>
    <string name="stamp_game_happy_face">happy face</string>
    <string name="stamp_game_lost_message">Unfortunately, you underwhelming performance during this stage made you rated as one of the worst candidates in this election</string>
    <string name="sad_face_for_stamp_game">sad face for stamp game</string>
    <string name="logged_in_activity_create_char">Create Character</string>
    <string name="logged_in_activity_select_char">Select Character</string>
    <string name="action_sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="resume">Resume</string>
    <string name="pause_menu_image">pause_menu_image</string>
    <string name="load_screen">change character</string>
    <string name="summary">this is the summary for all 3 game scores</string>
    <string name="summary_main_menu">main menu</string>
</resources>
