<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/stampLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context=".GamesActivity.StampGame.StampActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="116dp"
        android:layout_height="202dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/stamp_game_char_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stamp_game_yes"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/trump" />

    <Button
        android:id="@+id/stamp_game_yes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stamp_game_no" />

    <Button
        android:id="@+id/stamp_game_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_proposal"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="120dp"
        android:text="@string/stamp_game_proposal"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_char_rating"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_rating"
        android:textColor="#00BCD4"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_proposal"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_rating_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/stamp_game_rating_score"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_proposal_left"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/stamp_game_proposal_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="120dp"
        android:text="@string/stamp_game_proposal_left"
        android:textColor="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/NPC_image"
        android:layout_width="174dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/NPC_image"
        app:layout_constraintBottom_toTopOf="@+id/stamp_game_char_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/npcPrompt"
        app:layout_constraintVertical_bias="0.058"
        app:srcCompat="@drawable/helmet_guy" />

    <TextView
        android:id="@+id/npcPrompt"
        android:layout_width="358dp"
        android:layout_height="243dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="16dp"
        android:text="@string/NPC_Prompt"
        android:textSize="18sp"
        app:fontFamily="monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>